Fix input group align bug in Chrome 62
close ant-design/ant-design-pro#139

--- a/components/input/style/mixin.less
+++ b/components/input/style/mixin.less
@@ -257,7 +257,7 @@
     & > * {
       border-radius: 0;
       border-right-width: 0;
-      vertical-align: middle;
+      vertical-align: top; // https://github.com/ant-design/ant-design-pro/issues/139
       float: none;
       display: inline-block;
     }
